--- a/Coding-Exercises.vcxproj
+++ b/Coding-Exercises.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Codility\binary_gap.cpp" />
     <ClInclude Include="Educative.io\merge_sort.h" />
     <ClInclude Include="Educative.io\longest_palindromic_subsequence.h" />
     <ClInclude Include="GFG\zero_one_patterns.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Codility\array_rotation.cpp" />
     <ClCompile Include="Educative.io\longest_palindromic_subsequence.cpp" />
     <ClCompile Include="GFG\zero_one_patterns.cpp" />
     <ClCompile Include="src\main.cpp" />
