--- a/Coding-Exercises.vcxproj.filters
+++ b/Coding-Exercises.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="Codility\array_rotation.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="Codility\lonely_odd_array.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
