EXERCISE: permutation missing number

--- a/Coding-Exercises.vcxproj.filters
+++ b/Coding-Exercises.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="Codility\frog_jump.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="Codility\perm_missing_elem.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
