--- a/Coding-Exercises.vcxproj
+++ b/Coding-Exercises.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="Codility\array_rotation.cpp" />
     <ClCompile Include="Codility\frog_jump.cpp" />
     <ClCompile Include="Codility\lonely_odd_array.cpp" />
+    <ClCompile Include="Codility\perm_missing_elem.cpp" />
     <ClCompile Include="Educative.io\longest_palindromic_subsequence.cpp" />
     <ClCompile Include="GFG\zero_one_patterns.cpp" />
     <ClCompile Include="src\main.cpp" />
