--- a/Coding-Exercises.vcxproj
+++ b/Coding-Exercises.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClCompile Include="Codility\array_rotation.cpp" />
     <ClCompile Include="Codility\frog_jump.cpp" />
+    <ClCompile Include="Codility\frog_river_one.cpp" />
     <ClCompile Include="Codility\lonely_odd_array.cpp" />
     <ClCompile Include="Codility\minimal_difference.cpp" />
     <ClCompile Include="Codility\perm_missing_elem.cpp" />
