--- a/Coding-Exercises.vcxproj
+++ b/Coding-Exercises.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Codility\frog_jump.cpp" />
     <ClCompile Include="Codility\frog_river_one.cpp" />
     <ClCompile Include="Codility\lonely_odd_array.cpp" />
+    <ClCompile Include="Codility\max_counters.cpp" />
     <ClCompile Include="Codility\minimal_difference.cpp" />
     <ClCompile Include="Codility\perm_check.cpp" />
     <ClCompile Include="Codility\perm_missing_elem.cpp" />
