--- a/Coding-Exercises.vcxproj.filters
+++ b/Coding-Exercises.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClCompile Include="Codility\max_counters.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="Codility\first_missing_elem.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
