--- a/Coding-Exercises.vcxproj
+++ b/Coding-Exercises.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClCompile Include="Codility\array_rotation.cpp" />
     <ClCompile Include="Codility\count_div.cpp" />
+    <ClCompile Include="Codility\distinct_numbers.cpp" />
     <ClCompile Include="Codility\first_missing_elem.cpp" />
     <ClCompile Include="Codility\frog_jump.cpp" />
     <ClCompile Include="Codility\frog_river_one.cpp" />
