EXERCISE: max product of three

--- a/Coding-Exercises.vcxproj
+++ b/Coding-Exercises.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Codility\frog_river_one.cpp" />
     <ClCompile Include="Codility\lonely_odd_array.cpp" />
     <ClCompile Include="Codility\max_counters.cpp" />
+    <ClCompile Include="Codility\max_product_of_three.cpp" />
     <ClCompile Include="Codility\minimal_difference.cpp" />
     <ClCompile Include="Codility\passing_cars.cpp" />
     <ClCompile Include="Codility\perm_check.cpp" />
