--- a/Coding-Exercises.vcxproj
+++ b/Coding-Exercises.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="Codility\array_rotation.cpp" />
     <ClCompile Include="Codility\array_contains_triangle.cpp" />
     <ClCompile Include="Codility\count_div.cpp" />
+    <ClCompile Include="Codility\disk_intersection.cpp" />
     <ClCompile Include="Codility\distinct_numbers.cpp" />
     <ClCompile Include="Codility\first_missing_elem.cpp" />
     <ClCompile Include="Codility\frog_jump.cpp" />
